fixed header overflow auto

--- a/frontend/css/phone.css
+++ b/frontend/css/phone.css
@@ -21,6 +21,7 @@
   #fixed-header {
     flex-direction: column;
     align-items: flex-start;
+    overflow: auto;
   }
 
   #filters {
